# TestTasks

./: README.md  pyproject.toml
app/: __init__.py  main.py  utils.py
app/app_utils/: bind_errors.py  jwt.py
app/dao/: auth_dao.py  base_dao.py  image_dao.py
app/database/: __init__.py  accessor.py  metadata.py
app/dto/: auth_dto.py  base_model.py  image_dto.py
app/handlers/: __init__.py  auth_handler.py  image_handler.py
app/models/: __init__.py  image.py  mixins.py  user.py
app/settings/: __init__.py  base_settings.py  local.py
tests/: conftest.py  test_dto.py  unit_test.py
